# weathercpp

./: CMakeLists.txt  README.md  main.cpp  startWeather.sh
include/: Weather.h
src/: CMakeLists.txt  Weather.cpp
